Remove unused SVG icons and update layout structure
- Deleted SVG icons for Next.js, Nuxt.js, Pelican, Svelte, Vite, and Vue.js.
- Added keywords meta tag to base layout.
- Updated base layout to include a main element for content.
- Changed "On this page" heading to "Content:" in docs layout.
- Removed Cloudflare Web Analytics partial.
- Updated footer in docs partial to reflect new links and branding.
- Updated main footer to reflect new branding and links.
- Updated header to reflect new branding and links.
- Changed index page title and promotion text.
- Updated background animation in index page for improved visuals.
- Removed unused GIF file.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,12 @@
   },
   "dependencies": {
     "@grimlink/eleventy-plugin-lucide-icons": "^2.0.2",
-    "eleventy-plugin-toc": "^1.1.5"
+    "@theatre/core": "^0.7.2",
+    "canvas-sketch": "^0.7.7",
+    "canvas-sketch-util": "^1.10.0",
+    "eleventy-plugin-toc": "^1.1.5",
+    "glsl-noise": "^0.0.0",
+    "theatre": "^0.2.3",
+    "three": "^0.176.0"
   }
 }
