--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "canvas-sketch-util": "^1.10.0",
     "eleventy-plugin-toc": "^1.1.5",
     "glsl-noise": "^0.0.0",
+    "lucide": "^0.507.0",
+    "lucide-static": "^0.508.0",
+    "markdown-it-task-lists": "^2.1.1",
     "theatre": "^0.2.3",
     "three": "^0.176.0"
   }
