--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,8 +1,8 @@
-name: Deploy Eleventy static content to GitHub Pages
+name: Deploy Eleventy site to GitHub Pages
 
 on:
   push:
-    branches: ["master"]  
+    branches: ["master"] 
   workflow_dispatch:
 
 permissions:
@@ -15,14 +15,14 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Setup Node.js
@@ -33,16 +33,16 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build Eleventy + Tailwind
+      - name: Build Eleventy site
         run: npm run build
 
       - name: Setup GitHub Pages
         uses: actions/configure-pages@v5
 
-      - name: Upload site output
+      - name: Upload static site
         uses: actions/upload-pages-artifact@v2
         with:
-          path: ./_site  
+          path: ./_site
 
       - name: Deploy to GitHub Pages
         id: deployment
